Reference(String) accepts illegal characters